--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class="content">
                 <h1 data-aos="fade-left" data-aos-duration="1500" data-aos-delay="700">Hey I'm <span>Zakqy</span></h1>
                 <div class="typewriter" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="900">I'm a <span class="typewriter-text"></span><label for="">|</label></div>
-                <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">FANS KING EMYU DARI SD, DAN FANS EVOS REAL CUY</p>
+                <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">I am a creative programmer who is committed to providing maximum contribution in working on a project, and has a deep understanding of technology, and is easy to adapt new things.
+</p>
                 <div class="social-links">
                     <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
                     <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-instagram"></i></a>
